fix: title size on mobile

--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -1,8 +1,14 @@
+@import '../../styles/responsive';
+
 .title {
   max-width: 700px;
   font-size: 2.5rem;
 
   strong {
     color: var(--primary-100);
+  }
+
+  @include respond(mobile_l) {
+    font-size: 1.9rem;
   }
 }
